# EXO

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.bat  run.bat
examples/: sanity.cpp
exir/include/exir/: graph.hpp  verifier.hpp
exir/src/: graph.cpp  verifier.cpp
exo/include/exo/: pass.hpp  pass_manager.hpp
exo/include/exo/passes/: debug_print_pass.hpp
exo/src/: compiler.cpp  pass_manager.cpp
exo/src/passes/: debug_print_pass.cpp
